--- a/chaiAurDjango/static/style.css
+++ b/chaiAurDjango/static/style.css
@@ -1,12 +1,14 @@
 body {
-  background-color: rgba(2, 13, 71, 0.95);
-  color: rgb(234, 234, 143);
+  background-color: #0f1114;
+  color: #f2f2f2;
   text-align: center;
   font-size: x-large;
 }
 button{
-  background-color: rgba(2, 10, 53, 0.95);
+  background-color: #f2f2f2;
+  color: #0d0f12;
 } 
 button:hover{
-  background-color: rgba(11, 25, 102, 0.95);
+  background-color: #2a2b2b;
+  color: #f2f2f2;
 }
