--- a/chaiAurDjango/templates/website/contact.html
+++ b/chaiAurDjango/templates/website/contact.html
@@ -3,7 +3,7 @@
 Contact Page
 {% endblock %}
 {% block content %}
-<h1 class='bg-green-900 text-3xl text-yellow-400 p-2'>
+<h1 class='bg-gray-900 text-3xl p-2'>
     This is chai aur Django | Contact page✉️
 </h1>
 {% endblock %}
